--- a/mi1.html
+++ b/mi1.html
@@ -65,7 +65,7 @@
     <header>
         <div class="logo"><i class="fas fa-user-secret"></i> 4KHDHub</div>
         <nav class="nav-links">
-            <a href="Movies.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Action</a>
             <a href="#">Thriller</a>
         </nav>
@@ -99,11 +99,12 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>400 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.2 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.6 GB</span></a>
+            <a href="https://hubcloud.foo/video/31un1omdt1q35vq" class="d-btn btn-480"><span>Download 480p</span> <span>400 MB</span></a>
+            <a href="https://hubcloud.foo/video/wqaqmpkmvq3okkw" class="d-btn btn-720"><span>Download 720p</span> <span>1.2 GB</span></a>
+            <a href="https://hubcloud.foo/video/ppgkwxv4xxp0zpk" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.6 GB</span></a>
         </div>
     </main>
 
 </body>
+
 </html>
