--- a/mi2.html
+++ b/mi2.html
@@ -64,7 +64,7 @@
     <header>
         <div class="logo"><i class="fas fa-fire"></i> 4KHDHub</div>
         <nav class="nav-links">
-            <a href="Movies.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Action</a>
             <a href="#">Thriller</a>
         </nav>
@@ -98,11 +98,12 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>420 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.2 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.7 GB</span></a>
+            <a href="https://hubcloud.foo/video/rfr3vfhdtdrmvc6" class="d-btn btn-480"><span>Download 480p</span> <span>420 MB</span></a>
+            <a href="https://hubcloud.foo/video/vg1hrwfujnvyuo1" class="d-btn btn-720"><span>Download 720p</span> <span>1.2 GB</span></a>
+            <a href="https://hubcloud.foo/video/byvlqv1ya28guai" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.7 GB</span></a>
         </div>
     </main>
 
 </body>
+
 </html>
