--- a/mi3.html
+++ b/mi3.html
@@ -65,7 +65,7 @@
     <header>
         <div class="logo"><i class="fas fa-bomb"></i> 4KHDHub</div>
         <nav class="nav-links">
-            <a href="Movies.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Action</a>
             <a href="#">Thriller</a>
         </nav>
@@ -98,9 +98,9 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>430 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.3 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.8 GB</span></a>
+            <a href="https://hubcloud.foo/video/ygd9y57ctg5ggca" class="d-btn btn-480"><span>Download 480p</span> <span>430 MB</span></a>
+            <a href="https://hubcloud.foo/video/hzdwnosyyri6ux4" class="d-btn btn-720"><span>Download 720p</span> <span>1.3 GB</span></a>
+            <a href="https://hubcloud.foo/video/72e7q1rbnvyfy2y" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.8 GB</span></a>
         </div>
     </main>
 
