--- a/mi4.html
+++ b/mi4.html
@@ -99,9 +99,9 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>460 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.4 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.9 GB</span></a>
+            <a href="https://hubcloud.foo/video/v4wpltbv144qpo6" class="d-btn btn-480"><span>Download 480p</span> <span>460 MB</span></a>
+            <a href="https://hubcloud.foo/video/y7szrvstdvdiv7o" class="d-btn btn-720"><span>Download 720p</span> <span>1.4 GB</span></a>
+            <a href="https://hubcloud.foo/video/1dnd1f81nwxafde" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.9 GB</span></a>
         </div>
     </main>
 
