Update download links in mi5.html
Updated download links for the movie 'Mission: Impossible - Rogue Nation'.

--- a/mi5.html
+++ b/mi5.html
@@ -99,9 +99,9 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>480 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.5 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>3.1 GB</span></a>
+            <a href="https://hubcloud.foo/video/tx7zxjijvznuj9n" class="d-btn btn-480"><span>Download 480p</span> <span>480 MB</span></a>
+            <a href="https://hubcloud.foo/video/pppgssjorhvcejd" class="d-btn btn-720"><span>Download 720p</span> <span>1.5 GB</span></a>
+            <a href="https://hubcloud.foo/video/j0hh3hubo4qi1f1" class="d-btn btn-1080"><span>Download 1080p</span> <span>3.1 GB</span></a>
         </div>
     </main>
 
