--- a/mi6.html
+++ b/mi6.html
@@ -99,9 +99,9 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>500 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.6 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>3.2 GB</span></a>
+            <a href="https://hubcloud.foo/video/ywgg_g8_88_yv41" class="d-btn btn-480"><span>Download 480p</span> <span>500 MB</span></a>
+            <a href="https://hubcloud.foo/video/i1qbhcqqkqby2lc" class="d-btn btn-720"><span>Download 720p</span> <span>1.6 GB</span></a>
+            <a href="https://hubcloud.foo/video/2h723ak7c2vaehm" class="d-btn btn-1080"><span>Download 1080p</span> <span>3.2 GB</span></a>
         </div>
     </main>
 
