--- a/mi7.html
+++ b/mi7.html
@@ -99,9 +99,9 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>500 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.6 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>3.4 GB</span></a>
+            <a href="https://vcloud.zip/k03nltfffoolfhh" class="d-btn btn-480"><span>Download 480p</span> <span>500 MB</span></a>
+            <a href="https://vcloud.zip/e7ebnh1ngh8xru1" class="d-btn btn-720"><span>Download 720p</span> <span>1.6 GB</span></a>
+            <a href="https://vcloud.zip/eeenc01w1154015" class="d-btn btn-1080"><span>Download 1080p</span> <span>3.4 GB</span></a>
         </div>
     </main>
 
