--- a/mi8.html
+++ b/mi8.html
@@ -99,9 +99,9 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>500 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.6 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>3.3 GB</span></a>
+            <a href="https://vcloud.zip/7stzbcooog2io4x" class="d-btn btn-480"><span>Download 480p</span> <span>500 MB</span></a>
+            <a href="https://vcloud.zip/c1znxngphzp2gfc" class="d-btn btn-720"><span>Download 720p</span> <span>1.6 GB</span></a>
+            <a href="https://vcloud.zip/bmmckbbvpbwddkc" class="d-btn btn-1080"><span>Download 1080p</span> <span>3.3 GB</span></a>
         </div>
     </main>
 
