--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 <div class="movie-card"><div class="poster"><a href="bhediya.html"><img src="images/bhediya.jpg" alt="Bhediya"></a></div><div class="card-details"><a href="bhediya.html"><strong>Bhediya (2022)</strong></a>1080p [Hindi]</div></div>
                 <div class="movie-card"><div class="poster"><a href="munjya.html"><img src="images/munjya.jpg" alt="Munjya"></a></div><div class="card-details"><a href="munjya.html"><strong>Munjya (2024)</strong></a>1080p [Hindi]</div></div>
                 <div class="movie-card"><div class="poster"><a href="stree2.html"><img src="images/stree2.jpg" alt="Stree 2"></a></div><div class="card-details"><a href="stree2.html"><strong>Stree 2 (2024)</strong></a>1080p [Hindi]</div></div>
-                <div class="movie-card"><div class="poster"><a href="thamma.html"><img src="images/thamma.jpg" alt="Stree"></a></div><div class="card-details"><a href="stree.html"><strong>Stree (2018)</strong></a>1080p</div></div>
+                <div class="movie-card"><div class="poster"><a href="thamma.html"><img src="images/thamma.jpg" alt="Thamma"></a></div><div class="card-details"><a href="thamma.html"><strong>Thamma (2025)</strong></a>1080p</div></div>
             </div>
         </div>
  
@@ -498,3 +498,4 @@
     </main>
 </body> 
 </html>
+
