Update download links in vikrantrona.html
Updated download links for the movie Vikrant Rona.

--- a/vikrantrona.html
+++ b/vikrantrona.html
@@ -98,11 +98,12 @@
 
         <h3 class="section-heading">Download Links</h3>
         <div class="download-box">
-            <a href="#" class="d-btn btn-480"><span>Download 480p</span> <span>490 MB</span></a>
-            <a href="#" class="d-btn btn-720"><span>Download 720p</span> <span>1.4 GB</span></a>
-            <a href="#" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.9 GB</span></a>
+            <a href="https://vcloud.zip/a3cx5cce18pau15" class="d-btn btn-480"><span>Download 480p</span> <span>490 MB</span></a>
+            <a href="https://vcloud.zip/ie7ni1g7zp1nyg0" class="d-btn btn-720"><span>Download 720p</span> <span>1.4 GB</span></a>
+            <a href="https://vcloud.zip/2o_68kbe62kmbbm" class="d-btn btn-1080"><span>Download 1080p</span> <span>2.9 GB</span></a>
         </div>
     </main>
 
 </body>
+
 </html>
