new slider added

--- a/index.html
+++ b/index.html
@@ -540,6 +540,29 @@
                 <div class="movie-card"><div class="poster"><a href="maargan.html"><img src="images/maargan.jpg" alt="Maaran"></a></div><div class="card-details"><a href="maaran.html"><strong>Maaran (2022)</strong></a>1080p [Dual Audio]</div></div>
             </div>
         </div>
+
+        <div class="section-title"><i class="fas fa-spider"></i>Marvel Specials</div>
+            <div class="slider-wrapper" id="spiderVerseWrapper">
+                <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+                <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+                <div class="slider-track" id="spiderVerseTrack">
+                    <div class="movie-card"><div class="poster"><a href="spiderman1.html"><img src="images/spiderman1.jpg" alt="Spider-Man 1"></a></div><div class="card-details"><a href="spiderman1.html"><strong>Spider-Man (2002)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="spiderman2.html"><img src="images/spiderman2.jpg" alt="Spider-Man 2"></a></div><div class="card-details"><a href="spiderman2.html"><strong>Spider-Man 2 (2004)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="spiderman3.html"><img src="images/spiderman3.jpg" alt="Spider-Man 3"></a></div><div class="card-details"><a href="spiderman3.html"><strong>Spider-Man 3 (2007)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="tasm1.html"><img src="images/tasm1.jpg" alt="TASM 1"></a></div><div class="card-details"><a href="tasm1.html"><strong>The Amazing Spider-Man</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="tasm2.html"><img src="images/tasm2.jpg" alt="TASM 2"></a></div><div class="card-details"><a href="tasm2.html"><strong>The Amazing Spider-Man 2</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="spiderverse.html"><img src="images/spiderverse.jpg" alt="Spider-Man: into the Spider Verse"></a></div><div class="card-details"><a href="spiderverse.html"><strong>Spider-Man: into The Spider Verse</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="spiderverse2.html"><img src="images/spiderverse2.jpg" alt="Spider-Man: Across Spider verse"></a></div><div class="card-details"><a href="spiderverse2.html"><strong>Spider-Man: Across Spider Verse</strong></a>1080p</div></div>                   
+                    <div class="movie-card"><div class="poster"><a href="deadpool1.html"><img src="images/deadpool1.jpg" alt="Deadpool"></a></div><div class="card-details"><a href="deadpool1.html"><strong>Deadpool (2016)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="deadpool2.html"><img src="images/deadpool2.jpg" alt="Deadpool 2"></a></div><div class="card-details"><a href="deadpool2.html"><strong>Deadpool 2 (2018)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="loki_s1.html"><img src="images/loki_s1.jpg" alt="Loki S1"></a></div><div class="card-details"><a href="loki_s1.html"><strong>Loki: Season 1</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="loki_s2.html"><img src="images/loki_s2.jpg" alt="Loki S2"></a></div><div class="card-details"><a href="loki_s2.html"><strong>Loki: Season 2</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="moonknight.html"><img src="images/moonknight.jpg" alt="Moon Knight"></a></div><div class="card-details"><a href="moonknight.html"><strong>Moon Knight (Series)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="hawkeye.html"><img src="images/hawkeye.jpg" alt="Hawkeye"></a></div><div class="card-details"><a href="hawkeye.html"><strong>Hawkeye (miniseries)</strong></a>1080p</div></div>                
+                    <div class="movie-card"><div class="poster"><a href="msmarvel.html"><img src="images/msmarvel.jpg" alt="Ms.Marvel"></a></div><div class="card-details"><a href="msmarvel.html"><strong>Ms.Marvel</strong></a>1080p</div></div>                                
+                    <div class="movie-card"><div class="poster"><a href="ironheart.html"><img src="images/ironheart.jpg" alt="Ironheart"></a></div><div class="card-details"><a href="ironheart.html"><strong>Ironheart</strong></a>1080p</div></div>                                                
+                </div>
+            </div>
  
     </main>
 
@@ -659,7 +682,9 @@
         initSlider('potcWrapper', 'potcTrack', 900);
         initSlider('boysWrapper', 'boysTrack', 900);
         initSlider('southWrapper', 'southTrack', 900);
-        initSlider('southSpyWrapper', 'southSpyTrack', 900); // Added The Boys initialization
+        initSlider('southSpyWrapper', 'southSpyTrack', 900);
+        initSlider('spiderVerseWrapper', 'spiderVerseTrack', 900); // Added The Boys initialization
+
     </script>
 
 </body> 
