--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
                 <div class="movie-card">
                     <div class="poster"><a href="spidermannowayhome.html"><img src="images/Spider-Man-No-Way-Home-2021-Extended-Hindi-WEBRip-Full-Movie.jpg" alt="No Way Home"></a></div>
-                    <div class="card-details"><a href="spidermannowayhome.html"><strong>No Way Home</strong></a>1080p [x264/HEVC]</div>
+                    <div class="card-details"><a href="spidermannowayhome.html"><strong>Spider Man: No Way Home</strong></a>1080p [x264/HEVC]</div>
                 </div>
                 <div class="movie-card">
                     <div class="poster"><a href="doctorstrange2.html"><img src="images/Doctor-Strange-2-2022-English-HDRip-Full-Movie-HDHub4ua57a9e75e9371912.jpg" alt="Strange 2"></a></div>
@@ -689,3 +689,4 @@
 
 </body> 
 </html>
+
