--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
                 <div class="movie-card">
                     <div class="poster"><a href="spidermannowayhome.html"><img src="images/Spider-Man-No-Way-Home-2021-Extended-Hindi-WEBRip-Full-Movie.jpg" alt="No Way Home"></a></div>
-                    <div class="card-details"><a href="spidermannowayhome.html"><strong>Spider Man: No Way Home</strong></a>1080p [x264/HEVC]</div>
+                    <div class="card-details"><a href="spidermannowayhome.html"><strong>No Way Home</strong></a>1080p [x264/HEVC]</div>
                 </div>
                 <div class="movie-card">
                     <div class="poster"><a href="doctorstrange2.html"><img src="images/Doctor-Strange-2-2022-English-HDRip-Full-Movie-HDHub4ua57a9e75e9371912.jpg" alt="Strange 2"></a></div>
@@ -537,7 +537,8 @@
                 <div class="movie-card"><div class="poster"><a href="hit3.html"><img src="images/hit3.jpg" alt="HIT 3"></a></div><div class="card-details"><a href="hit3.html"><strong>HIT: The Third Case</strong></a>1080p [Coming Soon]</div></div>
                 <div class="movie-card"><div class="poster"><a href="porthozhil.html"><img src="images/porthozhil.jpg" alt="Por Thozhil"></a></div><div class="card-details"><a href="porthozhil.html"><strong>Por Thozhil</strong></a>1080p [Dual Audio]</div></div>
                 <div class="movie-card"><div class="poster"><a href="v.html"><img src="images/v.jpg" alt="V"></a></div><div class="card-details"><a href="v2020.html"><strong>V (2020)</strong></a>1080p [Hindi+Telugu]</div></div>
-                <div class="movie-card"><div class="poster"><a href="maargan.html"><img src="images/maargan.jpg" alt="Maaran"></a></div><div class="card-details"><a href="maaran.html"><strong>Maaran (2022)</strong></a>1080p [Dual Audio]</div></div>
+                <div class="movie-card"><div class="poster"><a href="kannursquad.html"><img src="images/kannursquad.jpg" alt="kannursquad"></a></div><div class="card-details"><a href="kannursquad.html"><strong>Kannur Squad (2023)</strong></a>1080p</div></div>
+                <div class="movie-card"><div class="poster"><a href="eleven.html"><img src="images/eleven.jpg" alt="eleven"></a></div><div class="card-details"><a href="eleven.html"><strong>Eleven (2025)</strong></a>1080p</div></div>
             </div>
         </div>
 
@@ -689,4 +690,3 @@
 
 </body> 
 </html>
-
