--- a/index.html
+++ b/index.html
@@ -367,6 +367,18 @@
                     <div class="poster"><a href="hp7p2.html"><img src="images/hp7p2.jpg" alt="Deathly Hallows Pt 2"></a></div>
                     <div class="card-details"><a href="hp7p2.html"><strong>HP: Deathly Hallows Pt 2</strong></a>1080p [x264/HEVC]</div>
                 </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="fb1.html"><img src="images/fb1.jpg" alt="Fantastic Beasts and Where to Find Them"></a></div>
+                    <div class="card-details"><a href="fb1.html"><strong>Fantastic Beasts and Where to Find Them </strong></a>1080p</div>
+                </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="fb2.html"><img src="images/fb2.jpg" alt="Fantastic Beasts and Where to Find Them 2 "></a></div>
+                    <div class="card-details"><a href="fb2.html"><strong>Fantastic Beasts and Where to Find Them 2</strong></a>1080p</div>
+                </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="fb3.html"><img src="images/fb3.jpg" alt="Fantastic Beasts and Where to Find Them 3 "></a></div>
+                    <div class="card-details"><a href="fb3.html"><strong>Fantastic Beasts and Where to Find Them 3</strong></a>1080p</div>
+                </div>
             </div>
         </div>
         <div class="section-title">
@@ -564,6 +576,31 @@
                     <div class="movie-card"><div class="poster"><a href="ironheart.html"><img src="images/ironheart.jpg" alt="Ironheart"></a></div><div class="card-details"><a href="ironheart.html"><strong>Ironheart</strong></a>1080p</div></div>                                                
                 </div>
             </div>
+
+            <div class="section-title"><i class="fas fa-mask"></i> DC Cinematic Universe</div>
+            <div class="slider-wrapper" id="dcWrapper">
+                <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+                <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+                <div class="slider-track" id="dcTrack">
+                    <div class="movie-card"><div class="poster"><a href="batmanbegins.html"><img src="images/batmanbegins.jpg" alt="Batman Begins"></a></div><div class="card-details"><a href="batmanbegins.html"><strong>Batman Begins</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="thedarkknight.html"><img src="images/thedarkknight.jpg" alt="The Dark Knight"></a></div><div class="card-details"><a href="thedarkknight.html"><strong>The Dark Knight</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="thedarkknight2.html"><img src="images/thedarkknightrises.jpg" alt="The Dark Knight Rises"></a></div><div class="card-details"><a href="thedarkknight2.html"><strong>The Dark Knight Rises</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="manofsteel.html"><img src="images/manofsteel.jpg" alt="Man of Steel"></a></div><div class="card-details"><a href="manofsteel.html"><strong>Man of Steel</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="bvs.html"><img src="images/bvs.jpg" alt="BvS"></a></div><div class="card-details"><a href="bvs.html"><strong>Batman v Superman: DOJ</strong></a>1080p [IMAX]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="justiceleague.html"><img src="images/justiceleague.jpg" alt="Justice League"></a></div><div class="card-details"><a href="justiceleague.html"><strong>Justice League</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="wonderwoman.html"><img src="images/wonderwoman.jpg" alt="Wonder Woman"></a></div><div class="card-details"><a href="wonderwoman.html"><strong>Wonder Woman (2017)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="aquaman.html"><img src="images/aquaman.jpg" alt="Aquaman"></a></div><div class="card-details"><a href="aquaman.html"><strong>Aquaman</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="joker.html"><img src="images/joker.jpg" alt="Joker"></a></div><div class="card-details"><a href="joker.html"><strong>Joker</strong></a>1080p</div></div>                   
+                    <div class="movie-card"><div class="poster"><a href="wonderwoman2.html"><img src="images/wonderwoman1984.jpg" alt="Wonder Woman 1984"></a></div><div class="card-details"><a href="wonderwoman2.html"><strong>Wonder Woman 1984 (2020)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="zsjl.html"><img src="images/zsjl.jpg" alt="Snyder Cut"></a></div><div class="card-details"><a href="zsjl.html"><strong>Zack Snyder's Justice League</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="thebatman.html"><img src="images/thebatman.jpg" alt="The Batman"></a></div><div class="card-details"><a href="thebatman.html"><strong>The Batman (2022)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="blackadam.html"><img src="images/blackadam.jpg" alt="Black Adam"></a></div><div class="card-details"><a href="blackadam.html"><strong>Black Adam</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="theflash.html"><img src="images/theflash.jpg" alt="The Flash"></a></div><div class="card-details"><a href="theflash.html"><strong>The Flash </strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="aquaman2.html"><img src="images/aquaman2.jpg" alt="Aquaman and The Lost Kingdom"></a></div><div class="card-details"><a href="aquaman2.html"><strong>Aquaman and The Lost Kingdom</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="joker2.html"><img src="images/joker2.jpg" alt="Joker 2"></a></div><div class="card-details"><a href="joker2.html"><strong>Joker Folie à Deux</strong></a>1080p</div></div>                   
+                    <div class="movie-card"><div class="poster"><a href="superman.html"><img src="images/superman.jpg" alt="superman"></a></div><div class="card-details"><a href="superman.html"><strong>Superman</strong></a>1080p</div></div>                   
+                </div>
+            </div>
  
     </main>
 
@@ -684,7 +721,8 @@
         initSlider('boysWrapper', 'boysTrack', 900);
         initSlider('southWrapper', 'southTrack', 900);
         initSlider('southSpyWrapper', 'southSpyTrack', 900);
-        initSlider('spiderVerseWrapper', 'spiderVerseTrack', 900); // Added The Boys initialization
+        initSlider('spiderVerseWrapper', 'spiderVerseTrack', 900);
+        initSlider('dcWrapper', 'dcTrack', 900);
 
     </script>
 
