--- a/index.html
+++ b/index.html
@@ -601,6 +601,22 @@
                     <div class="movie-card"><div class="poster"><a href="superman.html"><img src="images/superman.jpg" alt="superman"></a></div><div class="card-details"><a href="superman.html"><strong>Superman</strong></a>1080p</div></div>                   
                 </div>
             </div>
+
+            <div class="section-title"><i class="fas fa-laugh-squint"></i> Bollywood Comedy Classics</div>
+            <div class="slider-wrapper" id="comedyWrapper">
+                <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+                <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+                <div class="slider-track" id="comedyTrack">
+                    <div class="movie-card"><div class="poster"><a href="herapheri.html"><img src="images/herapheri.jpg" alt="Hera Pheri"></a></div><div class="card-details"><a href="herapheri.html"><strong>Hera Pheri</strong></a>1080p [Hindi]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="phirherapheri.html"><img src="images/phirherapheri.jpg" alt="Phir Hera Pheri"></a></div><div class="card-details"><a href="phirherapheri.html"><strong>Phir Hera Pheri</strong></a>1080p [Hindi]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="dedanadan.html"><img src="images/dedanadan.jpg" alt="De Dana Dan"></a></div><div class="card-details"><a href="dedanadan.html"><strong>De Dana Dan</strong></a>1080p [Hindi]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="bhagambhag.html"><img src="images/bhagambhag.jpg" alt="Bhagam Bhag"></a></div><div class="card-details"><a href="bhagambhag.html"><strong>Bhagam Bhag</strong></a>1080p [Hindi]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="khattameetha.html"><img src="images/khattameetha.jpg" alt="Khatta Meetha"></a></div><div class="card-details"><a href="khattameetha.html"><strong>Khatta Meetha</strong></a>1080p [Hindi]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="dhamaal.html"><img src="images/dhammal.jpg" alt="Dhamaal"></a></div><div class="card-details"><a href="dhamaal.html"><strong>Dhamaal</strong></a>1080p [Hindi]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="totaldhamaal.html"><img src="images/totaldhammal.jpeg" alt="Total Dhamaal"></a></div><div class="card-details"><a href="totaldhamaal.html"><strong>Total Dhamaal</strong></a>1080p [Hindi]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="padakkalam.html"><img src="images/padakkalam.jpg" alt="Padakkalam"></a></div><div class="card-details"><a href="padakkalam.html"><strong>Padakkalam</strong></a>1080p</div></div>
+                </div>
+            </div>
  
     </main>
 
@@ -722,8 +738,8 @@
         initSlider('southWrapper', 'southTrack', 900);
         initSlider('southSpyWrapper', 'southSpyTrack', 900);
         initSlider('spiderVerseWrapper', 'spiderVerseTrack', 900);
-        initSlider('dcWrapper', 'dcTrack', 900);
-
+        initSlider('dcWrapper', 'dcTrack', 900);       
+        initSlider('comedyWrapper', 'comedyTrack', 900);
     </script>
 
 </body> 
